{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 35,
  "lineage": "7471ac92-c1b3-e8dc-7abe-18d5d28e276d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "rlmgt_eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0c2944ce89fd6a05b",
            "domain": "vpc",
            "id": "eipalloc-0787093d5bd665157",
            "instance": "i-019a908baf69b4ceb",
            "network_interface": "eni-0723e095a2c80ef8b",
            "private_dns": "ip-10-0-0-136.eu-central-1.compute.internal",
            "private_ip": "10.0.0.136",
            "public_dns": "ec2-3-127-53-231.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.127.53.231",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_efs_file_system.rlmgt_efs",
            "aws_iam_instance_profile.rlmgt_instance_profile",
            "aws_iam_role.rlmgt_instance_role",
            "aws_instance.rlmgt_instance",
            "aws_kms_key.rlmgt_ebs_kms_key",
            "aws_security_group.rlmgt_instance_sg",
            "aws_subnet.rlmgt_public_subnet",
            "aws_vpc.rlmgt_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "rlmgt_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e1ce3e0deb8896d2",
            "arn": "arn:aws:ec2:eu-central-1:496124100072:instance/i-019a908baf69b4ceb",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:eu-central-1:496124100072:key/34d670bf-b4df-4d36-bdad-bd1ae4667642",
                "snapshot_id": "snap-03b7a547b27718c5f",
                "volume_id": "vol-069e06c2b8730e1c9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "laserriddleRelMgtInstanceProfile",
            "id": "i-019a908baf69b4ceb",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "releasemgt",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0723e095a2c80ef8b",
            "private_dns": "ip-10-0-0-136.eu-central-1.compute.internal",
            "private_ip": "10.0.0.136",
            "public_dns": "ec2-54-93-220-158.eu-central-1.compute.amazonaws.com",
            "public_ip": "54.93.220.158",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:eu-central-1:496124100072:key/34d670bf-b4df-4d36-bdad-bd1ae4667642",
                "volume_id": "vol-069e06c2b8730e1c9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-095266284c4b397b4",
            "tags": {
              "Application": "laserriddle",
              "Name": "laserriddleRelMgtInstance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07053b69d860c9268"
            ]
          },
          "dependencies": [
            "aws_efs_file_system.rlmgt_efs",
            "aws_iam_instance_profile.rlmgt_instance_profile",
            "aws_iam_role.rlmgt_instance_role",
            "aws_kms_key.rlmgt_ebs_kms_key",
            "aws_security_group.rlmgt_instance_sg",
            "aws_subnet.rlmgt_public_subnet",
            "aws_vpc.rlmgt_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "rlmgt_igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-006ef95b98bf46fcb",
            "owner_id": "496124100072",
            "tags": {
              "Application": "laserriddle",
              "Name": "laserriddleRelMgtIGW"
            },
            "vpc_id": "vpc-0accaa87cf6350b33"
          },
          "dependencies": [
            "aws_vpc.rlmgt_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "rlmgt_network_acl",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 110,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 120,
                "to_port": 80
              }
            ],
            "id": "acl-0bf2fa856aea21d9a",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 130,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 120,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 110,
                "to_port": 80
              }
            ],
            "owner_id": "496124100072",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-0171cffc1a3f97323",
              "subnet-095266284c4b397b4",
              "subnet-0ed332822c24ddd96"
            ],
            "tags": {
              "Application": "laserriddle",
              "Name": "laserriddleRelMgtNetworkACL"
            },
            "vpc_id": "vpc-0accaa87cf6350b33"
          },
          "dependencies": [
            "aws_subnet.rlmgt_public_subnet",
            "aws_vpc.rlmgt_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rlmgt_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-037fe355b584a9a4a",
            "owner_id": "496124100072",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-006ef95b98bf46fcb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Application": "laserriddle",
              "Name": "laserriddleRelMgtRoute"
            },
            "vpc_id": "vpc-0accaa87cf6350b33"
          },
          "dependencies": [
            "aws_internet_gateway.rlmgt_igw",
            "aws_vpc.rlmgt_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rlmgt_route_association",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a3b5aa4bc856ebe",
            "route_table_id": "rtb-037fe355b584a9a4a",
            "subnet_id": "subnet-095266284c4b397b4"
          },
          "dependencies": [
            "aws_internet_gateway.rlmgt_igw",
            "aws_route_table.rlmgt_route",
            "aws_subnet.rlmgt_public_subnet",
            "aws_vpc.rlmgt_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de81b4f5677ebfb9",
            "route_table_id": "rtb-037fe355b584a9a4a",
            "subnet_id": "subnet-0171cffc1a3f97323"
          },
          "dependencies": [
            "aws_internet_gateway.rlmgt_igw",
            "aws_route_table.rlmgt_route",
            "aws_subnet.rlmgt_public_subnet",
            "aws_vpc.rlmgt_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b2da9257e850a2d",
            "route_table_id": "rtb-037fe355b584a9a4a",
            "subnet_id": "subnet-0ed332822c24ddd96"
          },
          "dependencies": [
            "aws_internet_gateway.rlmgt_igw",
            "aws_route_table.rlmgt_route",
            "aws_subnet.rlmgt_public_subnet",
            "aws_vpc.rlmgt_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rlmgt_efs_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:496124100072:security-group/sg-0df08c1eb04139e2a",
            "description": "Release Mgt EFS Security Group",
            "egress": [],
            "id": "sg-0df08c1eb04139e2a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Instances can access to EFS",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-07053b69d860c9268"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "laserriddleRelMgtEfsSG",
            "name_prefix": null,
            "owner_id": "496124100072",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "laserriddle",
              "Name": "laserriddleRelMgtInstanceSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0accaa87cf6350b33"
          },
          "dependencies": [
            "aws_security_group.rlmgt_instance_sg",
            "aws_vpc.rlmgt_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rlmgt_instance_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:496124100072:security-group/sg-07053b69d860c9268",
            "description": "Release Mgt Instance Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Connection from EC2 to Internet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07053b69d860c9268",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS requests from Internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "EFS",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "laserriddleRelMgtInstanceSG",
            "name_prefix": null,
            "owner_id": "496124100072",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "laserriddle",
              "Name": "laserriddleRelMgtInstanceSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0accaa87cf6350b33"
          },
          "dependencies": [
            "aws_vpc.rlmgt_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rlmgt_public_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:496124100072:subnet/subnet-095266284c4b397b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-095266284c4b397b4",
            "map_public_ip_on_launch": true,
            "owner_id": "496124100072",
            "tags": {
              "Application": "laserriddle"
            },
            "vpc_id": "vpc-0accaa87cf6350b33"
          },
          "dependencies": [
            "aws_vpc.rlmgt_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:496124100072:subnet/subnet-0171cffc1a3f97323",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0171cffc1a3f97323",
            "map_public_ip_on_launch": true,
            "owner_id": "496124100072",
            "tags": {
              "Application": "laserriddle"
            },
            "vpc_id": "vpc-0accaa87cf6350b33"
          },
          "dependencies": [
            "aws_vpc.rlmgt_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:496124100072:subnet/subnet-0ed332822c24ddd96",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0ed332822c24ddd96",
            "map_public_ip_on_launch": true,
            "owner_id": "496124100072",
            "tags": {
              "Application": "laserriddle"
            },
            "vpc_id": "vpc-0accaa87cf6350b33"
          },
          "dependencies": [
            "aws_vpc.rlmgt_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "rlmgt_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:496124100072:vpc/vpc-0accaa87cf6350b33",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08dcc42402b2db550",
            "default_route_table_id": "rtb-0c5629f2bdb2f04f5",
            "default_security_group_id": "sg-0c76124ab4b27e877",
            "dhcp_options_id": "dopt-79c48912",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0accaa87cf6350b33",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c5629f2bdb2f04f5",
            "owner_id": "496124100072",
            "tags": {
              "Application": "laserriddle",
              "Name": "laserriddleRelMgtVPC"
            }
          }
        }
      ]
    }
  ]
}